--- a/ReolMarkedTeam7/MainWindow.xaml
+++ b/ReolMarkedTeam7/MainWindow.xaml
@@ -1,12 +1,15 @@
 ﻿<Window x:Class="ReolMarkedTeam7.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ReolMarkedTeam7"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        xmlns:views="clr-namespace:ReolMarkedTeam7.View"
+        xmlns:ViewModel="clr-namespace:ReolMarkedTeam7.ViewModel"
+        Title="Reolmarkedet" Width="1100" Height="700" Background="White">
     <Grid>
-
+        <!--<Grid.Resources>
+            <DataTemplate DataType="{x:Type ViewModel:BaseViewModel}">
+                <views:ItemView/>
+            </DataTemplate>
+        </Grid.Resources>-->
     </Grid>
 </Window>
+
