--- a/ReolMarkedTeam7/View/TenantView.xaml
+++ b/ReolMarkedTeam7/View/TenantView.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d" Height="720" Width="764">
+             Height="617" Width="1005"
+             Background="White">
 
     <!-- Hovedlayout: venstre liste / højre formular -->
     <Grid Background="White" Margin="12">
