--- a/GUI/View/TenantView.xaml
+++ b/GUI/View/TenantView.xaml
@@ -208,16 +208,25 @@
                         Margin="0,8,0,0">
                         
                         <Button 
-                            Content="Gem"  
+                            Content="Opret"  
                             Width="80" 
                             Height="32" 
-                            Margin="0,0,8,0"/>
+                            Margin="0,0,8,0"
+                            Command="{Binding AddTenantCommand}"/>
                         
                         <Button 
                             Content="Slet" 
                             Width="80" 
-                            Height="32"/>
-                        
+                            Height="32"
+                            Command="{Binding DeleteTenantCommand}"/>
+
+                        <Button 
+                            Content="Gem"  
+                            Width="80" 
+                            Height="32" 
+                            Margin="8,0,0,0"
+                            Command="{Binding SaveTenantCommand}"/>      
+
                     </StackPanel>
                 </StackPanel>
             </Border>
