Tilføjet searchtext property added ICollectionView TenantsView (understøtter filtrering) TenantsView i constructor med default view Call på FilterTenants metode i constructor, opdaterer datagrid med filtreret data Filtertenants metode i TenantViewModel

--- a/GUI/View/TenantView.xaml
+++ b/GUI/View/TenantView.xaml
@@ -47,7 +47,8 @@
                         x:Name="SearchBox" 
                         Height="28"
                         ToolTip="Søg efter tlf.nr. eller email" 
-                        Width="357"/>
+                        Width="357"
+                        Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}"/>
                 </StackPanel>
                 
                 <DataGrid 
