--- a/GUI/View/TenantView.xaml
+++ b/GUI/View/TenantView.xaml
@@ -116,7 +116,7 @@
                             x:Name="NameBox" 
                             Grid.Column="1" 
                             Height="28" 
-                            Text="{Binding SelectedTenant.Name, UpdateSourceTrigger=PropertyChanged}"/>
+                            Text="{Binding newName, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
 
                     <!-- Telefon -->
@@ -135,7 +135,7 @@
                             x:Name="PhoneBox" 
                             Grid.Column="1" 
                             Height="28" 
-                            Text="{Binding SelectedTenant.PhoneNo, UpdateSourceTrigger=PropertyChanged}"/>
+                            Text="{Binding newPhoneNo, UpdateSourceTrigger=PropertyChanged}"/>
                     
                     </Grid>
 
@@ -155,7 +155,7 @@
                             x:Name="EmailBox" 
                             Grid.Column="1" 
                             Height="28" 
-                            Text="{Binding SelectedTenant.Email, UpdateSourceTrigger=PropertyChanged}"/>
+                            Text="{Binding newEmail, UpdateSourceTrigger=PropertyChanged}"/>
                     
                     </Grid>
 
@@ -175,7 +175,7 @@
                             x:Name="AccountNoBox" 
                             Grid.Column="1" 
                             Height="28" 
-                            Text="{Binding SelectedTenant.AccountNo, UpdateSourceTrigger=PropertyChanged}"/>
+                            Text="{Binding newAccountNo, UpdateSourceTrigger=PropertyChanged}"/>
                     
                     </Grid>
 
