shelvingunit popup + binding reol liste

--- a/GUI/View/TenantView.xaml
+++ b/GUI/View/TenantView.xaml
@@ -190,7 +190,8 @@
                             Width="100" 
                             Height="28" 
                             Margin="0,8,0,0"
-                            HorizontalAlignment="Left"/>
+                            HorizontalAlignment="Left"
+                            Click="OpenNewWindow_Click"/>
                         
                     </StackPanel>
 
