--- a/GUI/View/AddShelfUnitWindow.xaml
+++ b/GUI/View/AddShelfUnitWindow.xaml
@@ -17,10 +17,13 @@
     </Grid.RowDefinitions>
 
     <TextBlock Text="Reolnummer" FontWeight="Bold"/>
-    <ComboBox x:Name="comboUnits" Grid.Row="1" Height="28" MinWidth="220" ItemsSource="{Binding ShelvingUnits}" DisplayMemberPath="ShelvingUnitID"/>
+    <ComboBox x:Name="comboUnits" Grid.Row="1" Height="28" MinWidth="220" 
+              ItemsSource="{Binding ShelvingUnits}" 
+              DisplayMemberPath="ShelvingUnitID"
+              SelectedItem="{Binding SelectedUnit, Mode=TwoWay}"/>
 
     <TextBlock Grid.Row="3" Text="Start dato" FontWeight="Bold"/>
-    <DatePicker x:Name="dateStart" Grid.Row="4" Height="28"/>
+    <DatePicker x:Name="dateStart" Grid.Row="4" Height="28" SelectedDate="{Binding StartDate}"/>
 
     <StackPanel Grid.Row="6" Orientation="Horizontal" HorizontalAlignment="Right">
         <Button Content="Annullér" Margin="0,0,8,0" IsCancel="True"/>
